--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             .upload-icon {
                 font-size: 40px;
-                color: gray;
+                color: black;
                 position: relative;
                 top: -100px;
                 left: -100px;
@@ -106,6 +106,8 @@
                 text-align: center;
                 position: relative;
                 top: -100px;
+                left: -40px;
+                white-space: nowrap;
 
             } 
 
@@ -121,12 +123,13 @@
             
             h4 {
                 color: black;
-                font-family: 'Times New Roman', Times, serif;
+                font-family: 'Roboto', sans-serif;
                 font-weight: normal;
                 text-align: center;
-                font-size: 35px;
+                font-size: 45px;
                 position: relative;
                 top: -140px;
+                right: -60px;
             }
 
             h5 {
@@ -135,6 +138,16 @@
                 text-align: center;
                 position: relative;
                 top: -100px;
+            }
+
+            h6 {
+                font-family:'Times New Roman', Times, serif;
+                color: rgb(15, 15, 106);
+                font-size: 23px;
+                font-weight: normal;
+                position: relative;
+                top: -842px;
+                right: -810px;
             }
 
             .journey {
@@ -162,9 +175,11 @@
             .third-header {
                 color: black;
                 font-family:'Poppins', sans-serif;
-                font-size: 30px;
+                font-size: 40px;
                 font-weight: bold;
                 float: left;
+                position: relative;
+                top: -170px;
             }
 
             .fourth-header {
@@ -173,15 +188,9 @@
                 color: black;
                 letter-spacing: 4px;
                 position: relative;
-                top: -220px;
-                left: -100px;
+                top: -190px;
+                left: -70px;
                 text-align: center;
-            }
-
-            .fifth-header {
-                position: relative;
-                top: -810px;
-                right: -460px;
             }
 
             p {
@@ -199,7 +208,7 @@
                 font-size: 17px;
                 color: black;
                 position: relative;
-                top: -50px;
+                top: -60px;
             }
 
             .bold {
@@ -226,6 +235,7 @@
             }
 
             .project-features {
+                font-family: 'Roboto', sans-serif;
                 font-size: 25px;
                 position: relative;
                 left: -450px;
@@ -241,14 +251,14 @@
             .project {
                 position: relative;
                 top: -55px;
-                left: -730px;
+                left: -770px;
                 box-shadow: 0 0 4px black, 0 0 4px black;
             }
 
             .project-2 {
                 position: relative;
-                top: -820px;
-                right: -850px;
+                top: -890px;
+                right: -820px;
                 box-shadow: 0 0 4px black, 0 0 4px black;
 
             }
@@ -258,13 +268,13 @@
                 font-size: 27px;
                 font-weight: normal;
                 position: relative;
-                top: -820px;
+                top: -920px;
                 right: -360px;
             }
 
             .pepsico {
                 position: relative;
-                top: -820px;
+                top: -950px;
                 right: -790px;
             }
 
@@ -321,15 +331,6 @@
                 height: 200px;
                 position: absolute;
                 left: 10%
-            }
-
-            .hr {
-                border: 1px solid blue;
-                width: 400px;
-                position: absolute;
-                right: 35%;
-                left: 40%;
-                top: 165%;
             }
 
             .hr-line {
@@ -416,7 +417,7 @@
             }
 
             .first-layout {
-                background-color: rgb(238, 236, 236);
+                background-color: rgb(239, 238, 238);
                 width: 1400px;
                 padding: 248px;
                 margin: -20px auto;
@@ -449,12 +450,16 @@
                 background-color: rgb(240, 240, 240);
                 width: 1400px;
                 padding: 170px;
+                position: relative;
+                top: -60px;
             }
 
             .third-layout {
                 background-color: rgb(225, 225, 225);
                 width: 1400px;
                 padding: 240px;
+                position: relative;
+                top: -60px;
             }
 
             .container-2 {
@@ -511,9 +516,11 @@
                 right: -700px;
             }
             .fourth-layout {
-                background-color: rgb(204, 202, 202);
+                background-color: rgb(221, 221, 221);
                 width: 1400px;
-                padding: 240px;
+                padding: 180px;
+                position: relative;
+                top: -60px;
             }
 
             .qr-logo {
@@ -552,7 +559,7 @@
         <!--Bio Card For the Website-->
         <div class="container">
             <h1>Tyree Black</h1>
-            <h2>Entry-Level IT Support | Cyber Security Enthastic</h2>
+            <h2>Entry-Level IT Support | Cyber Security Enthusiastic</h2>
             <p> 
             <span class="bold">Phone:</span> 
             <span class="phone">301-237-8150</span>
@@ -609,7 +616,7 @@
             <li>Presented findings and methodologies to a public audience, receiving recognition for detailed research.</li><br>
           </ul>
 
-          <h2 class="fifth-header">Packet Tracer Implementation for Pepsico Network Security</h2>
+          <h6>Packet Tracer Implementation for Pepsico Network Security</h6>
           <img src="images/PepsiCo-Topology.png" class="project-2" width="500px" height="500px">
           <ul>
             <h5 class="more-project-2">Responsibilites assiocated with this project:</h5>
@@ -653,15 +660,15 @@
             <div class="vl-line"></div>
             <div class="container-4">
             <h5>My Journey</h5>
-            <p class="journey">I would say my journey has been a mix of ups and downs, each experience I've been through always seems like a teaching lesson. After high school, I went straight into a community college and eventually transferred over to Bowie State University, where Im now majoring in computer technology while also in my last year but life threw me a curveball when I was laid off from my job. It was tough to deal with and I wasn't sure how I was going to manage that feeling of losing something that was so important to me. But eventually I started to find my footing when I got a role with Robert Half and eventually a fellowship at my university, I was also chasing after the Security+ where I took about 4 months to prepare.Eventually I also went after the CySA+ because I realize that cybersecurity was something I was passionate about it and really wanted to do.</p>
+            <p class="journey"> My journey has been a mix of ups and downs, each experience I've been through always seems like a teaching lesson. After high school, I went straight into a community college and eventually transferred over to Bowie State University, where Im now majoring in computer technology while also in my last year but life threw me a curveball when I was laid off from my job. It was tough to deal with and I wasn't sure how I was going to manage that feeling of losing something that was so important to me. But eventually I started to find my footing when I got a role with Robert Half and eventually a fellowship at my university, I was also chasing after the Security+ where I took about 4 months to prepare.Eventually I also went after the CySA+ because I realize that cybersecurity was something I was passionate about it and really wanted to do.</p>
             </div>
             <div class="container-5">
             <h5 class="challenges">Challenges</h5>
-            <p class="challenge">Breaking into IT and cybersecurity comes with its own set of obstacles. The field moves fast, requiring constant learning just to keep up. Balancing college, certifications, and hands-on practice has tested my patience and endurance. There were times when self-doubt crept in, and the workload felt overwhelming, but I kept pushing forward. Through every challenge, I’ve gained resilience, adaptability, and a stronger problem-solving mindset. </p>
+            <p class="challenge">Breaking into IT and cybersecurity comes with obstacles. The field moves fast, requiring constant learning just to keep up. Balancing college, certifications, and hands-on practice has tested my patience and endurance. There were times when self-doubt crept in, and the workload felt overwhelming, but I kept pushing forward. Through every challenge, I’ve gained resilience, adaptability, and a stronger problem-solving mindset. </p>
             </div>
             <div class="container-6">
                 <h5 class="hobbies">Hobbies</h5>
-                <p class="hobbie"></p>
+                <p class="hobbie">Outside of my professional and academic pursuits, I enjoy exploring various aspects of technology, from coding personal projects to learning about cybersecurity challenges. I like solving complex problems, whether it’s through programming or playing strategy-based video games that test my critical thinking.</p>
             </div>
         
           <!--QR Code Implementation-->
