--- a/Education.html
+++ b/Education.html
@@ -414,6 +414,19 @@
                 right: -600px;
             }
 
+            .progress-bar-eleven {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 90%, rgb(228, 228, 228) 10%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+            }
+
             .progress-bar-twelve {
                 width: 500px;
                 height: 20px;
@@ -452,12 +465,26 @@
                 top: -280px;
                 right: -600px;
             }
+
+            .progress-bar-fifteen {
+                width: 500px;
+                height: 20px;
+                border-radius: 32px;
+                background:linear-gradient(to right, red 80%, rgb(228, 228, 228) 20%);
+                text-align: center;
+                line-height: 20px;
+                color: white;
+                position: relative;
+                top: -280px;
+                right: -600px;
+
+            }
             
             #footer {
-                font-size: 35px;
+                font-size: 45px;
                 position: relative;
                 text-align: center;
-                bottom: -600px;
+                bottom: -800px;
                 left: -1000px;
                 padding-bottom: 1px;
             }
@@ -563,6 +590,7 @@
                 <!--Soft Skills Layout Section-->
                 <h1 class="soft-skills">Soft Skills</h1>
                 <h6>Attention To Detail</h6>
+                <div class="progress-bar-eleven"></div>
 
 
                 <h6>Customer Service</h6>
@@ -573,6 +601,9 @@
 
                 <h6>Problem Solving</h6>
                 <div class="progress-bar-fourteen"></div>
+
+                <h6>Oral Communication</h6>
+                <div class="progress-bar-fifteen"></div>
             </div>
 
             <footer id="footer">
