--- a/Contact_Tyree_Black.html
+++ b/Contact_Tyree_Black.html
@@ -39,6 +39,15 @@
                 right: -1070px;
             }
 
+            .Tyree {
+                background-color: transparent;
+                border-radius: 50%;
+                position: relative;
+                top: -155px;
+                right: -40px;
+
+            }
+
             h1 {
                 font-family: 'Roboto', sans-serif;
                 font-size: 22px;
@@ -51,6 +60,11 @@
             p {
                 font-size: 22px;
                 color: black;
+                position: relative;
+                white-space:nowrap;
+                position: relative;
+                top: -160px;
+                left: -30px;
             }
 
             .contact-2 {
@@ -120,7 +134,7 @@
             }
 
             .topnav a:hover {
-                color: black;
+                color: blue;
                 text-decoration: underline;
             }
 
@@ -213,7 +227,7 @@
 
             <div class="card">
             <i class="fa-solid fa-circle"></i>
-            <img src="">
+            <img src="images/me.jpg" class="Tyree" width="155px" height="155px">
             <p>Tyree Black | Entry-Level IT Support</p>
             </div>
 
@@ -264,7 +278,7 @@
                 <a href="https://www.linkedin.com/in/tyree-black-297344227/" target= "_blank">
                 <i class="fa-brands fa-linkedin"></i>
                  </a>
-                 <a href="" target="_blank">
+                 <a href="https://github.com/TyreeBlack" target="_blank">
                     <i class="fa-brands fa-github"></i>
                  </a>
             </div>
