--- a/index.html
+++ b/index.html
@@ -527,15 +527,14 @@
                 background-color: transparent;
                 position: relative;
                 right: -940px;
-                bottom: -370px;
-
+                bottom: -420px;
             }
 
             #footer {
                 font-family: 'Arial', sans-serif;
                 font-size: 34px;
                 color: blue;
-                padding-bottom: 40px;
+                padding-bottom: 10px;
                 position: relative;
                 left: -600px;
                 bottom: -100px;
@@ -660,11 +659,11 @@
             <div class="vl-line"></div>
             <div class="container-4">
             <h5>My Journey</h5>
-            <p class="journey"> My journey has been a mix of ups and downs, each experience I've been through always seems like a teaching lesson. After high school, I went straight into a community college and eventually transferred over to Bowie State University, where Im now majoring in computer technology while also in my last year but life threw me a curveball when I was laid off from my job. It was tough to deal with and I wasn't sure how I was going to manage that feeling of losing something that was so important to me. But eventually I started to find my footing when I got a role with Robert Half and eventually a fellowship at my university, I was also chasing after the Security+ where I took about 4 months to prepare.Eventually I also went after the CySA+ because I realize that cybersecurity was something I was passionate about it and really wanted to do.</p>
+            <p class="journey">I would say my journey has been a mix of ups and downs, each experience I've been through always seems like a teaching lesson. After high school, I went straight into a community college and eventually transferred over to Bowie State University, where Im now majoring in computer technology while also in my last year but life threw me a curveball when I was laid off from my job. It was tough to deal with and I wasn't sure how I was going to manage that feeling of losing something that was so important to me. But eventually I started to find my footing when I got a role with Robert Half and eventually a fellowship at my university, I was also chasing after the Security+ where I took about 4 months to prepare.Eventually I also went after the CySA+ because I realize that cybersecurity was something I was passionate about it and really wanted to do.</p>
             </div>
             <div class="container-5">
             <h5 class="challenges">Challenges</h5>
-            <p class="challenge">Breaking into IT and cybersecurity comes with obstacles. The field moves fast, requiring constant learning just to keep up. Balancing college, certifications, and hands-on practice has tested my patience and endurance. There were times when self-doubt crept in, and the workload felt overwhelming, but I kept pushing forward. Through every challenge, I’ve gained resilience, adaptability, and a stronger problem-solving mindset. </p>
+            <p class="challenge">Breaking into IT and cybersecurity comes with its own set of obstacles. The field moves fast, requiring constant learning just to keep up. Balancing college, certifications, and hands-on practice has tested my patience and endurance. There were times when self-doubt crept in, and the workload felt overwhelming, but I kept pushing forward. Through every challenge, I’ve gained resilience, adaptability, and a stronger problem-solving mindset. </p>
             </div>
             <div class="container-6">
                 <h5 class="hobbies">Hobbies</h5>
@@ -672,12 +671,12 @@
             </div>
         
           <!--QR Code Implementation-->
-            <img src="images/Qr-Code.png" class="qr-logo" widht="120px" height="120px" alt="Scan this to visit Tyree Black's portfolio">
+            <img src="images/Qr-Code.png" class="qr-logo" widht="200px" height="200px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
            
         <!--Footer Layout-->
         <footer id="footer">
-        <p>Coypright &copy; 2025 by Tyree Black | All Rights Reserved</p>
+        <p>Coypright &copy; 2025 Portfolio by Tyree Black | All Rights Reserved</p>
         </footer>
         </body>
         </html>
