--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
             </div>
         
           <!--QR Code Implementation-->
-            <img src="images/Qr-Code.png" class="qr-logo" widht="200px" height="200px" alt="Scan this to visit Tyree Black's portfolio">
+            <img src="images/QR-Code.png" class="qr-logo" widht="200px" height="200px" alt="Scan this to visit Tyree Black's portfolio">
             </div>
            
         <!--Footer Layout-->
